--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <link href="bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="dist/magnific-popup.css">
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,300|Oxygen' rel='stylesheet' type='text/css'>
   </head>
-  <body style="background-color:rgba(217, 217, 217, 0.8);">
+  <body style="background-color:rgba(217, 217, 217, 0.8); font-family: 'Ubuntu', sans-serif;">
     <div style="height: 80px;">
       <div id="sticker" style="position: fixed;">
         <div class="dropdown">
@@ -25,7 +26,7 @@
           <ul class="dropdown-menu pull-center">
             <li><a href="marina.html">Marina želi biti <i class="fa fa-arrow-right" aria-hidden="true"></i>&nbsp;<i>Web Designer</i></a></li>
             <li><a href="marko.html">Marko želi biti <i class="fa fa-arrow-right" aria-hidden="true"></i>&nbsp;<i> Software Developer</i></a></li>
-            <li><a href="#">Što nas dijeli od ostvarenja?</a></li>
+            <li><a href="ostvarenje.html">Što nas dijeli od ostvarenja?</a></li>
           </ul>
         </div>
       </div>
@@ -45,8 +46,8 @@
             <img class="first-slide" src="images/01.jpg" alt="First slide" style="width:100%; height:100%;">
             <div class="container">
               <div class="carousel-caption">
-                <h1>Naslov slike 1</h1>
-                <p>Neki tekst i tako.</p>
+                <h1></h1>
+                <p></p>
               </div>
             </div>
           </div>
@@ -54,8 +55,8 @@
             <img class="second-slide" src="images/02.jpg" alt="Second slide" style="height:100%; width:100%;">
             <div class="container">
               <div class="carousel-caption">
-                <h1>Naslov slike 2</h1>
-                <p>Nešto meh</p>
+                <h1></h1>
+                <p></p>
               </div>
             </div>
           </div>
@@ -63,8 +64,8 @@
             <img class="third-slide" src="images/03.png" alt="Third slide" style="width:100%; height:100%;">
             <div class="container">
               <div class="carousel-caption">
-                <h1>Naslov slike 3</h1>
-                <p>Nemam pojma</p>
+                <h1></h1>
+                <p></p>
               </div>
             </div>
           </div>
@@ -85,18 +86,18 @@
         <div class="col-md-8 col-md-offset-2">
           <div class="col-md-6" style="margin-bottom:100px;">
             <center>
-              <a href="#" id="MarinaPic"><img class="img-circle" src="images/marina.jpg" alt="Generic placeholder image" width="200" height="200"></a>
+              <a href="#" id="MarinaPic"><img class="img-circle profil" src="images/marina.jpg" alt="Generic placeholder image" width="200" height="200"></a>
               <h2><a id="Marina">Marina Kovač</a></h2>
               <p></p>
-              <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
+              <p><a class="btn btn-success" href="ostvarenje.html" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
             </center>
           </div>
           <div class="col-md-6">
             <center>
-              <a href="#" id="MarkoPic"><img class="img-circle" src="images/marko.jpg" alt="Generic placeholder image" width="200" height="200"></a>
+              <a href="#" id="MarkoPic"><img class="img-circle profil" src="images/marko.jpg" alt="Generic placeholder image" width="200" height="200"></a>
               <h2><a id="Marko">Marko Bilić</a></h2>
               <p></p>
-              <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
+              <p><a class="btn btn-success" href="ostvarenje.html" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
             </center>
           </div>
         </div>
@@ -149,7 +150,7 @@
 
       <div class="modal fade" id="marinamodPic" role="dialog">
         <div class="modal-dialog" style="margin-top:150px; margin-left: calc(50% - 380px);">
-          <div class="modal-content">
+          <div class="modal-content-pic">
             <img src="images/marina.jpg">
           </div>
         </div>
@@ -157,7 +158,7 @@
 
       <div class="modal fade" id="markomodPic" role="dialog">
         <div class="modal-dialog" style="margin-top:150px; margin-left: calc(50% - 270px);">
-          <div class="modal-content">
+          <div class="modal-content-pic">
             <img src="images/marko.jpg">
           </div>
         </div>
@@ -167,11 +168,9 @@
         <div class="razmak"></div>
       </div>
 
-      <div id="footer" style="background-color:#222222; width:100%;">
-        <br><br>
-        <p><a href="http://www.etfos.unios.hr/">ETFOS</a></p>
-        <p>Ova je stranica napravljena kao projekt za kolegij <a href="https://loomen.carnet.hr/course/view.php?id=3626">Multimedijska tehnika</a>&nbsp;- akademska godina 2015./2016.</p>
-      </div>
+    <div id="footer" style="background-color:#222222; width:100%;">
+      <br><br><br>
+      <p>Web stranica je izrađena za vrijeme pohađanja<a href="http://www.etfos.unios.hr/"> Elektrotehničkog fakulteta u Osijeku</a> u sklopu kolegija <a href="https://loomen.carnet.hr/course/view.php?id=3626">Multimedijska tehnika</a>&nbsp;- akademska godina 2015./2016.</p>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
