--- a/marina.html
+++ b/marina.html
@@ -14,59 +14,127 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,300|Oxygen' rel='stylesheet' type='text/css'>
 
 
    
   </head>
-  <body style="background-color:rgba(217, 217, 217, 0.8);">
+  <body style="background-color:rgba(217, 217, 217, 0.8); font-family: 'Ubuntu', sans-serif;">
     <div style="height: 80px;">
       <div id="sticker" style="position: fixed; text-align:center;">
           <a href="index.html"><i class="fa fa-home fa-4x"></i></a>
     </div>
     <div></div>
 
+    <div style="margin-bottom:30px;"></div>
     <h1>Web Designer</h1>
-    <h4><a href="marko2.html" style="text-decoration:none; color:#4CAF50;">(Koja je moja druga opcija?)</a></h4>
-    <div class="col-md-10 col-md-offset-1">
-
-      <div class="col-md-8" style="padding-bottom:30px;">
-        <img src="images/marina01.png" style="height:300px; width:350px; float:left;">
+    <div class="linkanje">
+      <h4><a href="ostvarenje.html" style="text-decoration:none; color:#4CAF50;">(Što me dijeli od ostvarenja?)</a></h4>
+    </div>
+    <div class="col-md-10 col-md-offset-1" >
+      <div class="col-md-10 col-md-offset-1">
+       <div class="col-md-6 prva" style="padding-bottom:30px;">
+        <center>
+          <a href="#" id="MarinaPic1" ><img src="images/marina01.gif" style="padding-top: 50px; width:100%; max-width: 350px;"></a>
+        </center>
+      </div>
+      <div class="col-md-6 prva">
         <h3>Početak i stvaranje</h3>
         <p>Kako uopće shvatiti što želimo od života i jesmo li pogodni za određeno zanimanje?<br>
           Svi smo bili uvjereni kao mali da će prva stvar koje smo se sjetili biti naše buduće zanimanje.<br>
           Bilo je tu puno prolaznih faza, želja i snova o tome što bih voljela raditi, no tek nedavno, zapravo prije godinu dana sam postala čvrsto uvjerena zahvaljujući odrađivanju stručne prakse u jednoj web developing firmi, da se želim usredotočiti na Front-end, točnije dizajniranje web stranica/aplikacija.<br><br>
           Što bi opisivalo pojam web dizajna? Prvenstveno osoba koja se bavi izradom web stranica treba znati organizirati, biti u koraku s određenim stilovima, poznavati zahtjeve korisnika te biti u mogućnosti stvoriti nešto što će ljudima olakšati svakidašnjicu. Prikupit će ideje, skicirati na papir ili pomoću računalnih programa i sprovesti u djelo, iz potencijalne ideje stvoreno je nešto lijepo i oku ugodno. 
         </p>
-
       </div>
-      <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:30px;"></div>
+    </div>
+    <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:30px;"></div>
 
-      <div class="col-md-8 col-md-offset-4">
-        <img src="images/marina02.png" style="height:300px; width:350px; float:right;">
+    <div class="col-md-10 col-md-offset-1">
+      <div class="col-md-6 druga">
         <h3>Znanja i vještine</h3>
-        <p>Većinom je poželjno da uz „kliker“ za estetiku, web dizajner zna WEB PROGRAMSKE JEZIKE.  Najčešće poslodavci traže da potencijalni web dizajner zna pisati kod u HTML-u, da na taj „kostur“ stranice primijeni stilove koje omogućuje CSS, a također ne bi odmoglo kada bi  stranicu isprogramirali i razvili pomoću JavaScripta i jQuerya radi dinamičnosti, efekata i korisnih mogućnosti koji bi korisniku olakšali istraživanje sučelja. Također važno je napomenuti da je od velike koristi popularni framework Bootstrap kojeg možemo gledati kao „biblioteku“ defaultnih izgleda određenih dijelova stranice kao što su zaglavlje, podnožje, slideri slika itd.</p>
+        <p>Većinom je poželjno da uz „kliker“ za estetiku, web dizajner zna web programske jezike. Najčešće poslodavci traže da potencijalni web dizajner zna pisati kod u <a href="http://www.w3schools.com/html/html_intro.asp">HTML-u</a>, da na taj „kostur“ stranice primijeni stilove koje omogućuje <a href="http://www.w3schools.com/css/css_intro.asp">CSS</a>, a također ne bi odmoglo kada bi  stranicu isprogramirali i razvili pomoću <a href="http://www.w3schools.com/js/js_intro.asp">JavaScripta</a> i <a href="http://www.w3schools.com/jquery/jquery_intro.asp">jQuerya</a> radi dinamičnosti, efekata i korisnih mogućnosti koji bi korisniku olakšali istraživanje sučelja. Također važno je napomenuti da je od velike koristi popularni framework Bootstrap kojeg možemo gledati kao „biblioteku“ defaultnih izgleda određenih dijelova stranice kao što su zaglavlje, podnožje, slideri slika itd.</p>
       </div>
-       <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:30px;"></div>
-
-        <div class="col-md-8" style="padding-bottom:30px;">
-          <img src="images/marina03.png" style="height:300px; width:350px; float:left;">
-          <h3>Prilagodba korisniku</h3>
-          <p>Uz sve gore navedeno i mogućnost stvaranja stranica koje oduzimaju dah, web dizajner treba uzeti u obzir prvenstveno korisnika, zbog čega pažnju treba pridati slijedećim stvarima:<br><br>
-            -Layout -> način na koji će elementi biti raspoređeni<br>
-            -Boje -> što ugodnije oku<br>
-            -Grafika -> logo,slike,ikone<br>
-            -Fontovi<br>
-            -Sadržaj<br><br>
-            Glavni je cilj težnja dobiti što više user-friendly web dizajn, što bi značilo:<br><br>
-            -Postaviti navigaciju kako bi se korisnik što bolje orijentirao po stranici<br>
-            -Multimedija kao što je video i audio snimak mogu pomoći da korisnik bolje „upije“ poruku/temu<br>
-            -Kompatibilnost, stranica se treba jednako dobro prikazivati i raditi na svih operacijskim sustavima i prpeglednicima i uređajima<br>
-            -tehnologija<br>
-            -interaktivnost, dijelovi stranice koji omogućuju komunikaciju s korisnikom
-          </p>
-        </div>
+      <div class="col-md-6 druga">
+        <center>
+          <a href="#" id="MarinaPic2" ><img src="images/marina02.png" style="width:100%; max-width: 350px;"></a>
+        </center>
+      </div>
     </div>
 
+    <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:30px;"></div>
+
+    <div class="col-md-10 col-md-offset-1">
+      <div class="col-md-6 treca">
+        <center>
+          <a href="#" id="MarinaPic3" ><img src="images/marina03.png" style="padding-top: 100px; width:100%; max-width: 350px;"></a>
+        </center>
+      </div>
+      <div class="col-md-6 treca">
+        <h3>Prilagodba korisniku</h3>
+        <p>Uz sve gore navedeno i mogućnost stvaranja stranica koje oduzimaju dah, web dizajner treba uzeti u obzir prvenstveno korisnika, zbog čega pažnju treba pridati slijedećim stvarima:<br><br>
+          <i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Layout -> način na koji će elementi biti raspoređeni<br>
+          <i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Boje -> što ugodnije oku<br>
+          <i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Grafika -> logo,slike,ikone<br>
+          <i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Fontovi<br>
+          <i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Sadržaj<br><br>
+          Glavni je cilj težnja dobiti što više user-friendly web dizajn, što bi značilo:<br><br>
+          <i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Postaviti navigaciju kako bi se korisnik što bolje orijentirao po stranici<br>
+          <i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Multimedija kao što je video i audio snimak mogu pomoći da korisnik bolje „upije“ poruku/temu<br>
+          <i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Kompatibilnost, stranica se treba jednako dobro prikazivati i raditi na svih operacijskim sustavima i prpeglednicima i uređajima<br>
+          <i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;tehnologija<br>
+          <i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;interaktivnost, dijelovi stranice koji omogućuju komunikaciju s korisnikom
+        </p>
+      </div>
+    </div>
+
+    <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:30px;"></div>
+
+    <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-6 druga">
+          <h3>A koja je moja druga opcija?</h3>
+          <p>Developer Android aplikacija</p>
+        </div>
+      <div class="col-md-6 druga" style="margin-bottom:30px;">
+        <center>
+          <a href="#" id="MarinaPic4" ><img src="images/marina04.png" style="width:100%; max-width: 350px;"></a>
+        </center>
+      </div>
+    </div>
+
+      <div class="modal fade" id="marinamodPic1" role="dialog">
+        <div class="modal-dialog" style="margin-top:150px; margin-left: calc(50% - 146px);">
+          <div class="modal-content-pic">
+            <img src="images/marina01.gif">
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="marinamodPic2" role="dialog">
+        <div class="modal-dialog" style="margin-top:150px; margin-left: calc(50% - 340px);">
+          <div class="modal-content-pic">
+            <img src="images/marina02.png">
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="marinamodPic3" role="dialog">
+        <div class="modal-dialog" style="margin-top:150px; margin-left: calc(50% - 320px);">
+          <div class="modal-content-pic">
+            <img src="images/marina03.png">
+          </div>
+        </div>
+      </div> 
+      <div class="modal fade" id="marinamodPic4" role="dialog">
+        <div class="modal-dialog" style="margin-top:150px; margin-left: calc(50% - 211px);">
+          <div class="modal-content-pic">
+            <img src="images/marina04.png">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="footer" style="background-color:#222222; width:100%;">
+      <br><br><br>
+      <p>Web stranica je izrađena za vrijeme pohađanja<a href="http://www.etfos.unios.hr/"> Elektrotehničkog fakulteta u Osijeku</a> u sklopu kolegija <a href="https://loomen.carnet.hr/course/view.php?id=3626">Multimedijska tehnika</a>&nbsp;- akademska godina 2015./2016.</p>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -77,6 +145,18 @@
     <script>
       $(document).ready(function(){
         $("#sticker").sticky({topSpacing:0});
+        $("#MarinaPic1").click(function(){
+          $("#marinamodPic1").modal();
+        });
+        $("#MarinaPic2").click(function(){
+          $("#marinamodPic2").modal();
+        });
+        $("#MarinaPic3").click(function(){
+          $("#marinamodPic3").modal();
+        });
+        $("#MarinaPic4").click(function(){
+          $("#marinamodPic4").modal();
+        });
       });
     </script>
   </body>
