--- a/marko.html
+++ b/marko.html
@@ -14,25 +14,33 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,300|Oxygen' rel='stylesheet' type='text/css'>
 
 
    
   </head>
-  <body style="background-color:rgba(217, 217, 217, 0.8);">
+  <body style="background-color:rgba(217, 217, 217, 0.8); font-family: 'Ubuntu', sans-serif;">
     <div style="height: 80px;">
       <div id="sticker" style="position: fixed; text-align:center;">
           <a href="index.html"><i class="fa fa-home fa-4x"></i></a>
     </div>
     <div></div>
 
+    <div style="margin-bottom:30px;"></div>
     <h1>Software Developer</h1>
-    <h4><a href="marko2.html" style="text-decoration:none; color:#4CAF50;">(Koja je moja druga opcija?)</a></h4>
+    <div class="linkanje">
+      <h4><a href="ostvarenje.html" style="text-decoration:none; color:#4CAF50;">(Što me dijeli od ostvarenja?)</a></h4>
+    </div>
     <div class="col-md-10 col-md-offset-1">
-
-      <div class="col-md-8 prva" style="padding-bottom:30px;">
-        <img src="images/marko01.png" style="height:300px; width:350px; float:left;">
+      <div class="col-md-10 col-md-offset-1">
+      <div class="col-md-6 prva" style="padding-bottom:30px;">
+        <center>
+          <a href="#" id="MarkoPic1"><img src="images/marko01.png" style="padding-top: 80px; width:100%; max-width: 350px;"></a>
+        </center>
+      </div>
+      <div class="col-md-6 prva" style="padding-bottom:30px;">
         <h3>Tko su programeri?</h3>
-        <p>Programer je osoba koja se bavi razvojem softvera , uključujući istraživanje, dizajn, programiranje i testiranje računalnih programa.
+        <p>Programer je osoba koja se bavi razvojem softvera, uključujući istraživanje, dizajn, programiranje i testiranje računalnih programa.
           <br>Software developer ima zadaću da:<br>
           <br><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Isplanira
           <br><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Dizajnira
@@ -42,32 +50,97 @@
         </p>
 
       </div>
+      </div>
       <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:30px;"></div>
 
-      <div class="col-md-8 col-md-offset-4 druga">
-        <img src="images/marko02.bmp" style="height:300px; width:350px; float:right;">
+      <div class="col-md-10 col-md-offset-1">
+      <div class="col-md-6 druga">
         <h3>Popularni programski jezici</h3>
         <p>Dizajniranje je korak u kojemu programer stvar osnovni model softwera s njegovim osnovnim dijelova koji će se koristi npr. Programski jezik, operativni sustav, hardwerske komponente.
           <br>Samo programiranje je naravno najzabavniji korak samog procesa jer programer u tom koraku primjenjuje sve svoje znanje i vještine u pisanju koda.
           <br>
           <br>Neki od programskih jezika koje se danas koriste su:
-          <br><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Java-objektno orijentirani programski jezik baziran na C++, ali sa pojednostavljenom sintaksom i pojednostavljenom kontrolom memorije
+          <br><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;<b>Java</b> - objektno orijentirani programski jezik baziran na C++, ali sa pojednostavljenom sintaksom i pojednostavljenom kontrolom memorije
           <br><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Osnovni koncept u Javi je klasa tj. sav izvorni kod je napisan unutar klasa.
         </p>
       </div>
-       <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:30px;"></div>
+      <div class="col-md-6 druga">
+        <center>
+          <a href="#" id="MarkoPic2"><img src="images/marko02.bmp" style="padding-top: 30px; width:100%; max-width: 350px;"></a>
+        </center>
+      </div>
+      </div>
 
-        <div class="col-md-8 treca" style="padding-bottom:30px;">
-          <img src="images/marko03.png" style="height:300px; width:350px; float:left;">
+      <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:30px;"></div>
+
+      <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-6 treca" style="padding-bottom:30px;">
+          <center>
+            <a href="#" id="MarkoPic3"><img src="images/marko03.png" style="width:100%; max-width: 350px;"></a>
+          </center>
+        </div>
+        <div class="col-md-6 treca" style="padding-bottom:30px;">
           <p>
-            <i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;C je programski jezik opće namjene s podrškom za objektno orijentirano programiranje
-            <br><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;C++ je produženi C koji se prvo zvao 'C s klasama' a kasnije dobio svoje današnje ime C++
-            <br><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;C# je izumljen s ciljem da .NET platforma dobije programski jezik, koji bi maksimalno iskoristio njezine sposobnosti. Sličan je programskim jezicima Java i C++
-            <br><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Python- dopušta programerima korištenje nekoliko stilova programiranja: objektno orijentirano, strukturno i aspektno orijentirano programiranje. Ova fleksibilnost čini python programski jezik sve populariniji.
-            <br><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Ruby i Php 
+            <i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;<b>C</b> je programski jezik opće namjene s podrškom za objektno orijentirano programiranje
+            <br><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;<b>C</b>++ je produženi C koji se prvo zvao 'C s klasama' a kasnije dobio svoje današnje ime C++
+            <br><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;<b>C#</b> je izumljen s ciljem da .NET platforma dobije programski jezik, koji bi maksimalno iskoristio njezine sposobnosti. Sličan je programskim jezicima Java i C++
+            <br><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;<b>Python</b>- dopušta programerima korištenje nekoliko stilova programiranja: objektno orijentirano, strukturno i aspektno orijentirano programiranje. Ova fleksibilnost čini python programski jezik sve populariniji.
+            <br><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;<b>Ruby i Php</b> 
             <br>Programiranje je posao koji je ograničen samo ljudskom kreativnošću. 
           </p>
         </div>
+      </div>
+
+    <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:30px;"></div>
+
+    <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-6 druga">
+          <h3>A koja je moja druga opcija?</h3>
+          <p><br><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;<b>Game Developer</b><br>
+            Game developer je software developer koji je specijaliziran za pravljenje video igara,to je posao koji se sastoji od više disciplina kao što su: programiranje, dizajn, testiranje, itd.
+            Programer se može specijalizirati za određenu konzolu: Xbox, PS4, ili PC.
+          </p>
+        </div>
+      <div class="col-md-6 druga" style="margin-bottom:30px;">
+        <center>
+          <a href="#" id="MarkoPic4" ><img src="images/marko04.png" style="width:100%; max-width: 350px;"></a>
+        </center>
+      </div>
+    </div>
+    </div>
+
+    <div class="modal fade" id="markomodPic1" role="dialog">
+        <div class="modal-dialog" style="margin-top:150px; margin-left: calc(50% - 250px);">
+          <div class="modal-content-pic">
+            <img src="images/marko01.png">
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="markomodPic2" role="dialog">
+        <div class="modal-dialog" style="margin-top:150px; margin-left: calc(50% - 245px);">
+          <div class="modal-content-pic">
+            <img src="images/marko02.bmp">
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="markomodPic3" role="dialog">
+        <div class="modal-dialog" style="margin-top:150px; margin-left: calc(50% - 230px);">
+          <div class="modal-content-pic">
+            <img src="images/marko03.png">
+          </div>
+        </div>
+      </div> 
+      <div class="modal fade" id="markomodPic4" role="dialog">
+        <div class="modal-dialog" style="margin-top:150px; margin-left: calc(50% - 230px);">
+          <div class="modal-content-pic">
+            <img src="images/marko04.png">
+          </div>
+        </div>
+      </div> 
+
+    <div id="footer" style="background-color:#222222; width:100%;">
+      <br><br><br>
+      <p>Web stranica je izrađena za vrijeme pohađanja<a href="http://www.etfos.unios.hr/"> Elektrotehničkog fakulteta u Osijeku</a> u sklopu kolegija <a href="https://loomen.carnet.hr/course/view.php?id=3626">Multimedijska tehnika</a>&nbsp;- akademska godina 2015./2016.</p>
     </div>
 
 
@@ -80,6 +153,15 @@
     <script>
       $(document).ready(function(){
         $("#sticker").sticky({topSpacing:0});
+        $("#MarkoPic1").click(function(){
+          $("#markomodPic1").modal();
+        }); $("#MarkoPic2").click(function(){
+          $("#markomodPic2").modal();
+        }); $("#MarkoPic3").click(function(){
+          $("#markomodPic3").modal();
+        }); $("#MarkoPic4").click(function(){
+          $("#markomodPic4").modal();
+        });
       });
     </script>
   </body>
